<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/black"
    >
    <!-- Chat Header -->
    <LinearLayout
        android:id="@+id/chatHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <ImageView
            android:id="@+id/groupIcon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:src="@drawable/ic_group"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/group_icon" />

        <TextView
            android:id="@+id/groupName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="Group Disccution"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/groupInfoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/group_info" />
    </LinearLayout>

    <!-- Chat Messages Area -->
    <ListView
        android:id="@+id/messagesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/chatHeader"
        android:layout_above="@id/inputArea"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:padding="10dp"
        android:layout_weight="1"/>

    <!-- Input Area -->
    <LinearLayout
        android:id="@+id/inputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@android:color/white"
        android:weightSum="1">

        <ImageView
            android:id="@+id/attachmentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_attachment"
            android:contentDescription="@string/attachment"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.7"
            android:textColor="#000"

            android:hint="@string/type_a_message"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="5" />

        <ImageView
            android:id="@+id/emojiButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/ic_emoji"
            android:contentDescription="@string/emoji"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/baseline_send_24"
            android:contentDescription="@string/send"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</RelativeLayout>

